[package]
name = "phylotree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
fixedbitset = "0.4.2"
itertools = "0.10.5"
num-traits = "0.2.15"
numeric_literals = "0.2.0"
ptree = "0.4.0"
rand = "0.8.5"
rand_distr = "0.4.3"
thiserror = "1.0.40"
trait-set = "0.3.0"
utf8-read = "0.4.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bin]]
name = "phylotree"

[[bench]]
name = "benchmarks"
harness = false

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./latex_doc_header.html" ]