[package]
name = "phylotree"
version = "0.1.3"
edition = "2021"
authors = ["Luc Blassel"]
description = "A crate to deal with phylogenetic trees and distance matrices"
readme = "README.md"
homepage = "https://github.com/lucblassel/phylotree-rs"
repository = "https://github.com/lucblassel/phylotree-rs"
license = "GPL-3.0"
keywords = [
    "phylogenetics",
    "bioinformatics",
    "cli",
    "newick",
    "phylip",
]
categories = [
    "command-line-utilities",
    "science",
    "simulation",
    "parser-implementations",
]

[lib]
crate-type = ["cdylib", "lib"]

[features]
python = ["pyo3"]
# default = ["python"]

[dependencies]
accurate = "0.3.1"
clap = { version = "4.1.13", features = ["derive"] }
clap_complete = "4.4.4"
fixedbitset = "0.4.2"
indicatif = "0.17.8"
itertools = "0.10.5"
ndarray = "0.16.1"
needletail = "0.5.1"
num-traits = "0.2.15"
numeric_literals = "0.2.0"
ptree = "0.4.0"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = "1.0.164"
thiserror = "1.0.40"
tinytemplate = "1.2.1"
trait-set = "0.3.0"
utf8-read = "0.4.0"

[dependencies.pyo3]
version = "0.19.0"
features = ["extension-module"]
optional = true

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
ndarray-rand = "0.15.0"

[[bin]]
name = "phylotree"

[[bench]]
name = "benchmarks"
harness = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./latex_doc_header.html"]

# This is for profiling purposes
# [profile.release]
# debug = 1
# [rust]
# debuginfo-level = 1
